--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
+  - {name: 🇺🇸 美国-3.23MB/s(Youtube:不良林), server: trojan-daozhu-uallen-qbit-azure-hk.kinhproxy.com, port: 443, type: trojan, password: trojan-daozhu-uallen-qbit-azure-hk, sni: trojan-daozhu-uallen-qbit-azure-hk.kinhproxy.com, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-153.7KB/s(Youtube:不良林), server: 111.45.22.136, port: 65062, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 111.45.22.136}}
+  - {name: 🇺🇸 美国-600.8KB/s(Youtube:不良林), server: 38.68.135.18, port: 8009, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
+  - {name: 🇨🇳 中国-161.8KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65065, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
   - {name: 🇨🇳 中国-1.23MB/s(Youtube:不良林), server: 120.233.150.146, port: 65024, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
-  - {name: 🇨🇳 中国-2.14MB/s(Youtube:不良林), server: 116.129.254.177, port: 65007, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
-  - {name: 🇨🇳 中国-259.5KB/s(Youtube:不良林), server: 116.129.254.177, port: 65048, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
-  - {name: 🇨🇳 中国-2.35MB/s(Youtube:不良林), server: opt11.boom.party, port: 21000, type: ssr, cipher: aes-256-cfb, password: Uk92CS, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 343767:3StTW5, obfs-param: download.windowsupdate.com}
-  - {name: 🇺🇸 美国-1.63MB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-260.3KB/s(Youtube:不良林), server: us-01.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: us-01.licom.ml, skip-cert-verify: true}
-  - {name: 🇻🇳 越南-5.74MB/s(Youtube:不良林), server: 103.173.255.21, port: 28000, type: trojan, password: 7da84a56-a1e2-48f3-a690-374a3973d7e8, skip-cert-verify: true}
-  - {name: 🇻🇳 越南-6.56MB/s(Youtube:不良林), server: 103.173.255.234, port: 28000, type: trojan, password: 7da84a56-a1e2-48f3-a690-374a3973d7e8, skip-cert-verify: true}
-  - {name: 🇻🇳 越南-5.86MB/s(Youtube:不良林), server: 103.173.255.127, port: 28443, type: trojan, password: 09553aee-5191-4870-a312-51d053ea668b, skip-cert-verify: true}
-  - {name: 🇻🇳 越南-6.21MB/s(Youtube:不良林), server: 103.173.255.127, port: 28000, type: trojan, password: 7da84a56-a1e2-48f3-a690-374a3973d7e8, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-595.7KB/s(Youtube:不良林), server: in-jp-1.iivvppnn.info, port: 38301, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-jp-1.iivvppnn.info}}
+  - {name: 🇨🇳 中国-419.1KB/s(Youtube:不良林), server: cn01.downloadmovie.cn, port: 65002, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: cn01.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-269.0KB/s(Youtube:不良林), server: cn03.downloadmovie.cn, port: 65041, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: cn03.downloadmovie.cn}}
+  - {name: 🇨🇦 加拿大-674.9KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇬🇧 英国-287.9KB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇺🇸 美国-3.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-153.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-600.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-161.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-259.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.35MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-260.3KB/s(Youtube:不良林)
-      - 🇻🇳 越南-5.74MB/s(Youtube:不良林)
-      - 🇻🇳 越南-6.56MB/s(Youtube:不良林)
-      - 🇻🇳 越南-5.86MB/s(Youtube:不良林)
-      - 🇻🇳 越南-6.21MB/s(Youtube:不良林)
+      - 🇨🇳 中国-595.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-419.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-269.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-674.9KB/s(Youtube:不良林)
+      - 🇬🇧 英国-287.9KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
+      - 🇺🇸 美国-3.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-153.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-600.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-161.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-259.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.35MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-260.3KB/s(Youtube:不良林)
-      - 🇻🇳 越南-5.74MB/s(Youtube:不良林)
-      - 🇻🇳 越南-6.56MB/s(Youtube:不良林)
-      - 🇻🇳 越南-5.86MB/s(Youtube:不良林)
-      - 🇻🇳 越南-6.21MB/s(Youtube:不良林)
+      - 🇨🇳 中国-595.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-419.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-269.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-674.9KB/s(Youtube:不良林)
+      - 🇬🇧 英国-287.9KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇺🇸 美国-3.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-153.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-600.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-161.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-259.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.35MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-260.3KB/s(Youtube:不良林)
-      - 🇻🇳 越南-5.74MB/s(Youtube:不良林)
-      - 🇻🇳 越南-6.56MB/s(Youtube:不良林)
-      - 🇻🇳 越南-5.86MB/s(Youtube:不良林)
-      - 🇻🇳 越南-6.21MB/s(Youtube:不良林)
+      - 🇨🇳 中国-595.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-419.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-269.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-674.9KB/s(Youtube:不良林)
+      - 🇬🇧 英国-287.9KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
+      - 🇺🇸 美国-3.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-153.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-600.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-161.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-259.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.35MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-260.3KB/s(Youtube:不良林)
-      - 🇻🇳 越南-5.74MB/s(Youtube:不良林)
-      - 🇻🇳 越南-6.56MB/s(Youtube:不良林)
-      - 🇻🇳 越南-5.86MB/s(Youtube:不良林)
-      - 🇻🇳 越南-6.21MB/s(Youtube:不良林)
+      - 🇨🇳 中国-595.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-419.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-269.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-674.9KB/s(Youtube:不良林)
+      - 🇬🇧 英国-287.9KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
+      - 🇺🇸 美国-3.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-153.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-600.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-161.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-259.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.35MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-260.3KB/s(Youtube:不良林)
-      - 🇻🇳 越南-5.74MB/s(Youtube:不良林)
-      - 🇻🇳 越南-6.56MB/s(Youtube:不良林)
-      - 🇻🇳 越南-5.86MB/s(Youtube:不良林)
-      - 🇻🇳 越南-6.21MB/s(Youtube:不良林)
+      - 🇨🇳 中国-595.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-419.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-269.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-674.9KB/s(Youtube:不良林)
+      - 🇬🇧 英国-287.9KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇺🇸 美国-3.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-153.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-600.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-161.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-259.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.35MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-260.3KB/s(Youtube:不良林)
-      - 🇻🇳 越南-5.74MB/s(Youtube:不良林)
-      - 🇻🇳 越南-6.56MB/s(Youtube:不良林)
-      - 🇻🇳 越南-5.86MB/s(Youtube:不良林)
-      - 🇻🇳 越南-6.21MB/s(Youtube:不良林)
+      - 🇨🇳 中国-595.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-419.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-269.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-674.9KB/s(Youtube:不良林)
+      - 🇬🇧 英国-287.9KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇺🇸 美国-3.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-153.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-600.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-161.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-259.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.35MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-260.3KB/s(Youtube:不良林)
-      - 🇻🇳 越南-5.74MB/s(Youtube:不良林)
-      - 🇻🇳 越南-6.56MB/s(Youtube:不良林)
-      - 🇻🇳 越南-5.86MB/s(Youtube:不良林)
-      - 🇻🇳 越南-6.21MB/s(Youtube:不良林)
+      - 🇨🇳 中国-595.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-419.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-269.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-674.9KB/s(Youtube:不良林)
+      - 🇬🇧 英国-287.9KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
