--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-3.23MB/s(Youtube:不良林), server: trojan-daozhu-uallen-qbit-azure-hk.kinhproxy.com, port: 443, type: trojan, password: trojan-daozhu-uallen-qbit-azure-hk, sni: trojan-daozhu-uallen-qbit-azure-hk.kinhproxy.com, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-153.7KB/s(Youtube:不良林), server: 111.45.22.136, port: 65062, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 111.45.22.136}}
-  - {name: 🇺🇸 美国-600.8KB/s(Youtube:不良林), server: 38.68.135.18, port: 8009, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
-  - {name: 🇨🇳 中国-161.8KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65065, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
+  - {name: 🇬🇧 英国-287.9KB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇨🇳 中国-1.23MB/s(Youtube:不良林), server: 120.233.150.146, port: 65024, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
   - {name: 🇨🇳 中国-595.7KB/s(Youtube:不良林), server: in-jp-1.iivvppnn.info, port: 38301, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-jp-1.iivvppnn.info}}
-  - {name: 🇨🇳 中国-419.1KB/s(Youtube:不良林), server: cn01.downloadmovie.cn, port: 65002, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: cn01.downloadmovie.cn}}
-  - {name: 🇨🇳 中国-269.0KB/s(Youtube:不良林), server: cn03.downloadmovie.cn, port: 65041, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: cn03.downloadmovie.cn}}
-  - {name: 🇨🇦 加拿大-674.9KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇬🇧 英国-287.9KB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇦 加拿大-174.5KB/s(Youtube:不良林), server: 72.140.224.195, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-260.3KB/s(Youtube:不良林), server: us-01.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: us-01.licom.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-280.9KB/s(Youtube:不良林), server: best03.downloadmovie.cn, port: 65081, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best03.downloadmovie.cn}}
+  - {name: 波兰-314.0KB/s(Youtube:不良林), server: 217.30.10.67, port: 9032, type: ss, cipher: aes-256-cfb, password: UWZQeLRWnkqgkseq}
+  - {name: 波兰-436.1KB/s(Youtube:不良林), server: 217.30.10.67, port: 9079, type: ss, cipher: aes-256-cfb, password: TPqX8edgbAURcAMb}
+  - {name: 🇺🇸 美国-1.28MB/s(Youtube:不良林), server: 38.68.135.18, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇺🇸 美国-212.6KB/s(Youtube:不良林), server: v116.v2dns.bar, port: 80, type: vmess, uuid: c97cf46e-1554-36cb-8b36-c3556b883dc4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v116-DtoEwAEX, ws-headers: {Host: v116.v2dns.bar}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-3.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-153.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-600.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-161.8KB/s(Youtube:不良林)
+      - 🇬🇧 英国-287.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.23MB/s(Youtube:不良林)
       - 🇨🇳 中国-595.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-419.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-269.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-674.9KB/s(Youtube:不良林)
-      - 🇬🇧 英国-287.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-174.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-260.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-280.9KB/s(Youtube:不良林)
+      - 波兰-314.0KB/s(Youtube:不良林)
+      - 波兰-436.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.28MB/s(Youtube:不良林)
+      - 🇺🇸 美国-212.6KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-3.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-153.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-600.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-161.8KB/s(Youtube:不良林)
+      - 🇬🇧 英国-287.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.23MB/s(Youtube:不良林)
       - 🇨🇳 中国-595.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-419.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-269.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-674.9KB/s(Youtube:不良林)
-      - 🇬🇧 英国-287.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-174.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-260.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-280.9KB/s(Youtube:不良林)
+      - 波兰-314.0KB/s(Youtube:不良林)
+      - 波兰-436.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.28MB/s(Youtube:不良林)
+      - 🇺🇸 美国-212.6KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-3.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-153.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-600.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-161.8KB/s(Youtube:不良林)
+      - 🇬🇧 英国-287.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.23MB/s(Youtube:不良林)
       - 🇨🇳 中国-595.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-419.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-269.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-674.9KB/s(Youtube:不良林)
-      - 🇬🇧 英国-287.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-174.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-260.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-280.9KB/s(Youtube:不良林)
+      - 波兰-314.0KB/s(Youtube:不良林)
+      - 波兰-436.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.28MB/s(Youtube:不良林)
+      - 🇺🇸 美国-212.6KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-3.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-153.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-600.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-161.8KB/s(Youtube:不良林)
+      - 🇬🇧 英国-287.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.23MB/s(Youtube:不良林)
       - 🇨🇳 中国-595.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-419.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-269.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-674.9KB/s(Youtube:不良林)
-      - 🇬🇧 英国-287.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-174.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-260.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-280.9KB/s(Youtube:不良林)
+      - 波兰-314.0KB/s(Youtube:不良林)
+      - 波兰-436.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.28MB/s(Youtube:不良林)
+      - 🇺🇸 美国-212.6KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-3.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-153.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-600.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-161.8KB/s(Youtube:不良林)
+      - 🇬🇧 英国-287.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.23MB/s(Youtube:不良林)
       - 🇨🇳 中国-595.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-419.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-269.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-674.9KB/s(Youtube:不良林)
-      - 🇬🇧 英国-287.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-174.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-260.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-280.9KB/s(Youtube:不良林)
+      - 波兰-314.0KB/s(Youtube:不良林)
+      - 波兰-436.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.28MB/s(Youtube:不良林)
+      - 🇺🇸 美国-212.6KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-3.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-153.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-600.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-161.8KB/s(Youtube:不良林)
+      - 🇬🇧 英国-287.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.23MB/s(Youtube:不良林)
       - 🇨🇳 中国-595.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-419.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-269.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-674.9KB/s(Youtube:不良林)
-      - 🇬🇧 英国-287.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-174.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-260.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-280.9KB/s(Youtube:不良林)
+      - 波兰-314.0KB/s(Youtube:不良林)
+      - 波兰-436.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.28MB/s(Youtube:不良林)
+      - 🇺🇸 美国-212.6KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-3.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-153.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-600.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-161.8KB/s(Youtube:不良林)
+      - 🇬🇧 英国-287.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.23MB/s(Youtube:不良林)
       - 🇨🇳 中国-595.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-419.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-269.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-674.9KB/s(Youtube:不良林)
-      - 🇬🇧 英国-287.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-174.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-260.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-280.9KB/s(Youtube:不良林)
+      - 波兰-314.0KB/s(Youtube:不良林)
+      - 波兰-436.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.28MB/s(Youtube:不良林)
+      - 🇺🇸 美国-212.6KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
