--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇬🇧 英国-287.9KB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇳 中国-1.23MB/s(Youtube:不良林), server: 120.233.150.146, port: 65024, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
-  - {name: 🇨🇳 中国-595.7KB/s(Youtube:不良林), server: in-jp-1.iivvppnn.info, port: 38301, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-jp-1.iivvppnn.info}}
-  - {name: 🇨🇦 加拿大-174.5KB/s(Youtube:不良林), server: 72.140.224.195, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇺🇸 美国-260.3KB/s(Youtube:不良林), server: us-01.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: us-01.licom.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-280.9KB/s(Youtube:不良林), server: best03.downloadmovie.cn, port: 65081, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best03.downloadmovie.cn}}
   - {name: 波兰-314.0KB/s(Youtube:不良林), server: 217.30.10.67, port: 9032, type: ss, cipher: aes-256-cfb, password: UWZQeLRWnkqgkseq}
-  - {name: 波兰-436.1KB/s(Youtube:不良林), server: 217.30.10.67, port: 9079, type: ss, cipher: aes-256-cfb, password: TPqX8edgbAURcAMb}
-  - {name: 🇺🇸 美国-1.28MB/s(Youtube:不良林), server: 38.68.135.18, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇺🇸 美国-212.6KB/s(Youtube:不良林), server: v116.v2dns.bar, port: 80, type: vmess, uuid: c97cf46e-1554-36cb-8b36-c3556b883dc4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v116-DtoEwAEX, ws-headers: {Host: v116.v2dns.bar}}
+  - {name: 🇨🇳 中国-280.9KB/s(Youtube:不良林), server: best03.downloadmovie.cn, port: 65081, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best03.downloadmovie.cn}}
+  - {name: 🇬🇧 英国-443.7KB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇳 中国-2.38MB/s(Youtube:不良林), server: n62.boom.party, port: 20000, type: ssr, cipher: aes-256-cfb, password: Uk92CS, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 343767:3StTW5, obfs-param: download.windowsupdate.com}
+  - {name: 🇨🇳 中国-1.80MB/s(Youtube:不良林), server: 116.129.254.177, port: 65007, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 🇨🇳 中国-1023.6KB/s(Youtube:不良林), server: gzyd1.52147.top, port: 30080, type: trojan, password: 7da84a56-a1e2-48f3-a690-374a3973d7e8, sni: gzyd1.52147.top, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-220.0KB/s(Youtube:不良林), server: gzyd2.52147.top, port: 30010, type: trojan, password: 7da84a56-a1e2-48f3-a690-374a3973d7e8, sni: gzyd2.52147.top, skip-cert-verify: true}
+  - {name: 🇩🇪 德国-355.4KB/s(Youtube:不良林), server: 80.78.132.177, port: 28443, type: trojan, password: 09553aee-5191-4870-a312-51d053ea668b, skip-cert-verify: true}
+  - {name: 🇨🇳 台湾-537.2KB/s(Youtube:不良林), server: hinet.52147.top, port: 28000, type: trojan, password: 7da84a56-a1e2-48f3-a690-374a3973d7e8, sni: hinet.52147.top, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-964.6KB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇬🇧 英国-287.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-595.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-174.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-260.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-280.9KB/s(Youtube:不良林)
       - 波兰-314.0KB/s(Youtube:不良林)
-      - 波兰-436.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.28MB/s(Youtube:不良林)
-      - 🇺🇸 美国-212.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-280.9KB/s(Youtube:不良林)
+      - 🇬🇧 英国-443.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1023.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-220.0KB/s(Youtube:不良林)
+      - 🇩🇪 德国-355.4KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-537.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-964.6KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇬🇧 英国-287.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-595.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-174.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-260.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-280.9KB/s(Youtube:不良林)
       - 波兰-314.0KB/s(Youtube:不良林)
-      - 波兰-436.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.28MB/s(Youtube:不良林)
-      - 🇺🇸 美国-212.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-280.9KB/s(Youtube:不良林)
+      - 🇬🇧 英国-443.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1023.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-220.0KB/s(Youtube:不良林)
+      - 🇩🇪 德国-355.4KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-537.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-964.6KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇬🇧 英国-287.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-595.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-174.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-260.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-280.9KB/s(Youtube:不良林)
       - 波兰-314.0KB/s(Youtube:不良林)
-      - 波兰-436.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.28MB/s(Youtube:不良林)
-      - 🇺🇸 美国-212.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-280.9KB/s(Youtube:不良林)
+      - 🇬🇧 英国-443.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1023.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-220.0KB/s(Youtube:不良林)
+      - 🇩🇪 德国-355.4KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-537.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-964.6KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇨🇳 台湾-537.2KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇬🇧 英国-287.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-595.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-174.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-260.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-280.9KB/s(Youtube:不良林)
       - 波兰-314.0KB/s(Youtube:不良林)
-      - 波兰-436.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.28MB/s(Youtube:不良林)
-      - 🇺🇸 美国-212.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-280.9KB/s(Youtube:不良林)
+      - 🇬🇧 英国-443.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1023.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-220.0KB/s(Youtube:不良林)
+      - 🇩🇪 德国-355.4KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-537.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-964.6KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇬🇧 英国-287.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-595.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-174.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-260.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-280.9KB/s(Youtube:不良林)
       - 波兰-314.0KB/s(Youtube:不良林)
-      - 波兰-436.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.28MB/s(Youtube:不良林)
-      - 🇺🇸 美国-212.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-280.9KB/s(Youtube:不良林)
+      - 🇬🇧 英国-443.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1023.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-220.0KB/s(Youtube:不良林)
+      - 🇩🇪 德国-355.4KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-537.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-964.6KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇬🇧 英国-287.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-595.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-174.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-260.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-280.9KB/s(Youtube:不良林)
       - 波兰-314.0KB/s(Youtube:不良林)
-      - 波兰-436.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.28MB/s(Youtube:不良林)
-      - 🇺🇸 美国-212.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-280.9KB/s(Youtube:不良林)
+      - 🇬🇧 英国-443.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1023.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-220.0KB/s(Youtube:不良林)
+      - 🇩🇪 德国-355.4KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-537.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-964.6KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇬🇧 英国-287.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-595.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-174.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-260.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-280.9KB/s(Youtube:不良林)
       - 波兰-314.0KB/s(Youtube:不良林)
-      - 波兰-436.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.28MB/s(Youtube:不良林)
-      - 🇺🇸 美国-212.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-280.9KB/s(Youtube:不良林)
+      - 🇬🇧 英国-443.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1023.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-220.0KB/s(Youtube:不良林)
+      - 🇩🇪 德国-355.4KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-537.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-964.6KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
